<resources>
    <string name="app_name">ProtonMailTest</string>

    <!-- MAIN ACTIVITY -->
    <string name="title_forecast">Forecast</string>
    <!-- Tabs -->
    <string name="tab_title_upcoming">Upcoming</string>
    <string name="tab_title_hottest">Hottest</string>
    <!-- Options Menu-->
    <string name="menu_refresh">Refresh</string>
    <string name="menu_clear_cache">Clear cache</string>
    <string name="menu_turn_off_debug_toasts">Turn OFF debug toasts</string>
    <string name="menu_turn_on_debug_toasts">Turn ON debug toasts</string>
    <!-- Labels -->
    <string name="label_offline">Offline</string>
    <string name="label_no_data">No data available.</string>

    <!-- DETAILS ACTIVITY -->
    <string name="title_day_index">Day %d</string>
    <string name="btn_download">Download</string>
    <!-- Labels -->
    <string name="label_description">Description</string>
    <string name="label_precipitation">Precipitation</string>
    <string name="label_temp">Low / High Temp.</string>
    <string name="label_sun">Sunrise / Sunset</string>
    <string name="label_image_not_downloaded">Image is not downloaded yet.</string>
    <string name="label_image_downloading">Downloading…</string>
    <string name="label_image_download_failed">Could not download. Try again.</string>

</resources>
